--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link type="text/css" href="css/style.css" rel="stylesheet">
-	<script type="text/javascript" src="js/about.js"></script>
+	<script type="module" src="js/about.js"></script>
 	<title data-i18n="__MSG_ext_extension_name__ - __MSG_html_about_title__"></title>
 </head>
 
