--- a/src/broken.html
+++ b/src/broken.html
@@ -3,7 +3,7 @@
 
 <head>
   <link type="text/css" href="css/style.css" rel="stylesheet">
-  <script type="text/javascript" src="js/broken.js"></script>
+  <script type="module" src="js/broken.js"></script>
   <title data-i18n="__MSG_ext_extension_name__ __MSG_html_broken_title__"></title>
 </head>
 
