--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link type="text/css" href="css/popup.css" rel="stylesheet">
-	<script type="text/javascript" src="js/popup.js"></script>
+	<script type="module" src="js/popup.js"></script>
 
 </head>
 
