--- a/src/update.html
+++ b/src/update.html
@@ -3,8 +3,8 @@
 
 <head>
   <link type='text/css' href='css/style.css' rel='stylesheet'>
-  <script type='text/javascript' src='js/historyUtils.js'></script>
-  <script type='text/javascript' src='js/update.js'></script>
+  <!-- <script type='module' src='js/historyUtils.js'></script> -->
+  <script type='module' src='js/update.js'></script>
   <title id='gsTitle' data-i18n='__MSG_ext_extension_name__ - __MSG_html_update_title__'></title>
 
 </head>
