Update debug page and minor logging additions

--- a/src/debug.html
+++ b/src/debug.html
@@ -34,7 +34,7 @@
         <th>Index</th>
         <th></th>
         <th>Title</th>
-        <th>Time to suspend</th>
+        <th>Seconds to<br>suspend</th>
         <th>Status</th>
       </tr>
     </thead>
