Add tab group display to debug and history pages
style.css: Add default group colors (light & dark) for Chrome and Edge
historyItems: Add a "zzz" unicode icon for suspended pages
debug and history: Auto-refresh when gaining focus

--- a/src/debug.html
+++ b/src/debug.html
@@ -33,6 +33,7 @@
         <th>TabId</th>
         <th>Index</th>
         <th></th>
+        <th>Group</th>
         <th>Title</th>
         <th>Seconds to<br>suspend</th>
         <th>Status</th>
