Go to "Sessions Management" faster 😄
This update provides a direct link to the Session Management page within the extension's main menu (in the toolbar), within the context menu (right-click), and within the available Shortcuts.
Fix for #116 #224

--- a/src/popup.html
+++ b/src/popup.html
@@ -46,6 +46,9 @@
 		</div>
 
 		<div class="group">
+			<div class="menuOption" id="sessionManagerLink">
+				<span class="optionText" data-i18n="__MSG_html_sidebar_session_management__"></span>
+			</div>
 			<div class="menuOption" id="settingsLink">
 				<span class="optionText" data-i18n="__MSG_html_popup_settings__"></span>
 			</div>
