--- a/src/options.html
+++ b/src/options.html
@@ -59,6 +59,9 @@
             <option value='0' data-i18n='__MSG_html_options_suspend_never__'></option>
             <option value='0.33' data-i18n='20 __MSG_html_options_suspend_seconds__'></option>
             <option value='1' data-i18n='1 __MSG_html_options_suspend_minute__'></option>
+            <option value='2' data-i18n='2 __MSG_html_options_suspend_minutes__'></option>
+            <option value='3' data-i18n='3 __MSG_html_options_suspend_minutes__'></option>
+            <option value='4' data-i18n='4 __MSG_html_options_suspend_minutes__'></option>
             <option value='5' data-i18n='5 __MSG_html_options_suspend_minutes__'></option>
             <option value='10' data-i18n='10 __MSG_html_options_suspend_minutes__'></option>
             <option value='15' data-i18n='15 __MSG_html_options_suspend_minutes__'></option>
