Add automatic theme selection #67
- Update and unify the dark & light themes in all 3 css files
- Move theme process into documentReadyAndLocalisedAsPromised that all pages use
- Refine shortcuts page layout
- Modernize the font stack
- Update en messages file
- Replaces #234

--- a/src/debug.html
+++ b/src/debug.html
@@ -8,7 +8,7 @@
   <title id='gsTitle'>The Marvellous Suspender - Debugger</title>
 </head>
 
-<body hidden>
+<body>
   <div>
     <span>debugErrors: </span>
     <a id='toggleDebugError' href='#'></a> &nbsp;|&nbsp;
