--- a/src/suspended.html
+++ b/src/suspended.html
@@ -14,7 +14,7 @@
   <meta name='google' content='notranslate'>
 </head>
 
-<body class='suspended-page hide-initially'>
+<body class='suspended-page'>
 
 <script type='text/html' id='previewTemplate'>
   <img id='gsPreviewImg' class='gsPreviewImg' />
