--- a/src/broken.html
+++ b/src/broken.html
@@ -7,7 +7,7 @@
   <title data-i18n="__MSG_ext_extension_name__ __MSG_html_broken_title__"></title>
 </head>
 
-<body class="splash-wrap" hidden>
+<body class="splash-wrap">
 
   <div class="splash">
 
