--- a/src/options.html
+++ b/src/options.html
@@ -8,7 +8,7 @@
   <title data-i18n='__MSG_ext_extension_name__ - __MSG_html_options_title__'></title>
 </head>
 
-<body hidden>
+<body>
 
 <div class='mainContent'>
 
@@ -157,6 +157,7 @@ __MSG_html_options_suspend_discard_after_suspend_tooltip_line3b__'>
         <br />
         <div class='select-wrapper'>
           <select id='theme' class='option'>
+            <option value='system' data-i18n='__MSG_html_options_suspend_theme_system__'></option>
             <option value='light' data-i18n='__MSG_html_options_suspend_theme_light__'></option>
             <option value='dark' data-i18n='__MSG_html_options_suspend_theme_dark__'></option>
           </select>
