--- a/src/history.html
+++ b/src/history.html
@@ -50,12 +50,14 @@
     <a href='#' id='importSession' class='btn' data-i18n='__MSG_html_history_import_session__'></a>
     <input type='file' id='importSessionAction' hidden />
 
-    <br><br>
+    <br><br><br>
 
     <div class='formRow'>
       <label for='migrateFromId' class='cbLabel' data-i18n='__MSG_html_history_migrate_old_id__'></label>
-      <input size='33' id='migrateFromId' class='option' value='klbibkeccnjlkjkiokjodocebajanakg' /><br>
+      <input type="text" size='33' id='migrateFromId' class='option' value='klbibkeccnjlkjkiokjodocebajanakg' />
+      <div id="migrateFromName"></div>
       <a href='#' id='migrateTabs' class='btn' data-i18n='__MSG_html_history_migrate_tabs__'></a>
+      <div id="migrateMessage"></div>
     </div>
   </div>
 
