Clean up suspended page visuals
Remove white background from update notice
Clean up the page layout when an update is available

--- a/src/suspended.html
+++ b/src/suspended.html
@@ -40,7 +40,7 @@
 
 </div>
 
-<div class='pageHeader' id='tmsUpdateAvailable'>
+<div id='tmsUpdateAvailable'>
   <div class='splash welcome-message card'>
     <img class='suspendy-guy' src='img/suspendy-guy.png' />
     <div>
