--- a/src/update.html
+++ b/src/update.html
@@ -25,9 +25,9 @@
     </div>
     <div id='noBackupInfo' class='reallyHidden'>
       <p>
-        <span data-i18n='__MSG_html_update_info_nobackup_prefix__'></span><a id='sessionManagerLink' href='#'
-                                                                             data-i18n='__MSG_html_session_manager__'></a><span
-        data-i18n='__MSG_html_update_info_nobackup_suffix__'></span>
+        <span data-i18n='__MSG_html_update_info_nobackup_prefix__'></span>
+        <a id='sessionManagerLink' href='#' data-i18n='__MSG_html_session_manager__'></a>
+        <span data-i18n='__MSG_html_update_info_nobackup_suffix__'></span>
       </p>
     </div>
     <hr />
