--- a/src/suspended.html
+++ b/src/suspended.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 </div>
-<div class='watermark'>
+<div id="watermark" class='watermark'>
   The Marvellous Suspender
 </div>
 
